<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/space_16"
        android:background="@drawable/rounded_white_top">
        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="@dimen/space_24"
            android:layout_height="@dimen/space_24"
            android:layout_margin="@dimen/space_5"
            android:src="@drawable/ic_close"
            android:elevation="@dimen/space_5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/content_desc_button_close" />
        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_215"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/content_desc_movie_backdrop" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="7.8"
            android:padding="@dimen/space_8"
            android:background="#40000000"
            android:fontFamily="@font/custom_sans_medium"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/gold"
            android:elevation="@dimen/space_5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_poster"
            android:layout_width="@dimen/space_150"
            android:layout_height="@dimen/space_215"
            app:cardCornerRadius="@dimen/space_8"
            app:cardElevation="@dimen/space_3"
            android:layout_margin="@dimen/space_16"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/content_desc_movie_poster" />
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            app:fontFamily="@font/custom_sans_light"
            android:textColor="@color/grey_75"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/container_poster"
            app:layout_constraintTop_toTopOf="@id/container_poster"
            tools:text="March 23, 2022" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginHorizontal="@dimen/space_16"
            app:fontFamily="@font/custom_sans_medium"
            android:textColor="@color/grey_21"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/container_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_release_date"
            tools:text="title" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_genre"
            android:layout_width="@dimen/space_0"
            android:layout_height="@dimen/space_0"
            android:layout_marginHorizontal="@dimen/space_16"
            android:layout_marginVertical="@dimen/space_8"
            tools:listitem="@layout/item_genre"
            tools:itemCount="5"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintBottom_toTopOf="@id/tv_overview"
            app:layout_constraintStart_toEndOf="@id/container_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginHorizontal="@dimen/space_16"
            app:fontFamily="@font/custom_sans_light"
            android:textColor="@color/grey_21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_poster"
            tools:text="description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>