<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_24"
                android:fontFamily="@font/custom_sans_medium"
                android:textColor="@color/grey_21"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/container_search"
                android:layout_width="@dimen/space_0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_16"
                app:cardCornerRadius="@dimen/space_5"
                app:cardElevation="@dimen/space_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">
                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:queryHint="search title.."
                    app:queryBackground="@android:color/transparent"
                    app:iconifiedByDefault="false"/>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:id="@+id/label_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_genre"
                android:textSize="@dimen/text_size_14"
                android:fontFamily="@font/custom_sans_medium"
                android:textColor="@color/grey_21"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_search"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_8"
                tools:listitem="@layout/item_genre"
                tools:itemCount="5"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/label_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="invisible"
                tools:visibility="visible"/>
            <TextView
                android:id="@+id/label_discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_discover"
                android:textSize="@dimen/text_size_14"
                android:fontFamily="@font/custom_sans_medium"
                android:textColor="@color/grey_21"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_genre"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_0"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginVertical="@dimen/space_8"
                tools:listitem="@layout/item_movie"
                tools:itemCount="2"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                app:layout_constraintTop_toBottomOf="@id/label_discover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                tools:visibility="visible"/>
            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_8"
                app:layout_constraintTop_toBottomOf="@id/label_genre"
                app:layout_constraintBottom_toTopOf="@id/label_discover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                tools:visibility="visible">
                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/shimmer_genre" />
            </com.facebook.shimmer.ShimmerFrameLayout>
            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/label_discover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                tools:visibility="visible">
                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/shimmer_movie_list" />
            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
